src/styles/main.css
@import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');



#form-complete{
    animation: switch 0.5s ease-in;
}
body{
    -webkit-font-smoothing: subpixel-antialiased;
}
::-webkit-scrollbar{
    width: 10px;
}
::-webkit-scrollbar-thumb{
    background: #cccccc;
    border-radius: 10px;
}
.testing_div{
    display: flex;
    flex-direction: column;
    height: 200px;
    width: 600px;
    animation: switch 1s  ease-out;

}

@keyframes switch {
    0%{
        opacity: 0;
    }
    100%{
        opacity: 1;
    }
    
}

html{
    scroll-behavior: smooth;

}
*{
    font-family: var(--font-sans);
    font-style: normal;
}

#resume{
    @media screen and (max-width:1650px) {
        .orbit-container {
            display: none;
        }
        
    }
    
}
.main_content{
    margin-right: 10px;
    margin-left: 10px;
    display: flex;
    flex-direction: column;
}

#landing_page{
    position: relative;
    height: 100vh;
    margin-bottom: 50px;
    padding-top: 250px;
    padding-bottom: 400px;
    container-type: size;
    font-weight: 700;
    font-style: normal;
}

.container{
    display: flex;
    flex-direction: column;
    position: relative;
    height: 670px;
    margin-bottom: 50px;
    overflow: hidden;
    container-type: size;
}
@container (max-width: 500px){
    p{
        font-size: 0.9em
    }
    .stack{
        font-size: 0.7em
    }


}
.aboutme_desc{
    width: 500px;
}
.aboutme_body{
    width: 100%;
    margin-right: 100px;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    font-family: var(--font-mono);
}

.aboutme_img{
    color: #55f886;
    font-family: var(--font-mono);
    border: 2px rgb(85, 123, 248) solid;
    border-radius: 2px;
    width: 500px;
    height: 400px;
    padding: 40px;
}
.caret_anim{
    animation: blink 1s infinite;
}
@keyframes blink{
    0%{
        opacity:0;
    }
    50%{
        opacity: 1;
    }
    100%{
        opacity: 0;
    }
}
.contactme_header{
    display: flex;
    align-items: center;
}
.red{
    color: #f85555;

}
.yellow{
    color: #ffbc48;

}
.green{
    color: #55f886;

}
.blue{
    color: #557bf8;
}
.stack{
    display: grid;
    grid-template-columns: repeat(3, minmax(130px, 250px));
    padding: 30px;
}
.button_sub{
    border: black solid 3px;
    padding: 10px;
    color: black;
    background: linear-gradient(to left, transparent 50%, black 50%) right;
    background-size: 200%;
    transition: 0.5s ease-out;
    cursor: pointer;
}
.button_dark{
    border: rgb(255, 255, 255) solid 3px;
    padding: 10px;
    color: white;
    background: linear-gradient(to left, transparent 50%, rgb(255, 255, 255) 50%) right;
    background-size: 200%;
    transition: 0.5s ease-out;
    cursor: pointer;
    
}
.button_sub:hover{
    color: white;
    background-position: left;
}
.button_dark:hover{
    color: rgb(0, 0, 0);
    background-position: left;
}
.team_icon{
    display: inline-block;
    margin-left: 10px;
    position: relative;
    bottom: -10px;

}

.fillable{
    font-family: var(--font-sans);
    padding-top: 10px;
    width: 50%;
    display: inline-block;

}
input:invalid:focus{
    outline: rgb(248, 85, 85) solid 1px;

}
.name{
    display: inline-block;
    border: transparent;
    padding: 10px;
    margin-right: 10px;
    margin-bottom: 10px;
    width: 190px;
    outline: none;
}
.email{
    display: inline-block;
    border: transparent;
    padding: 10px;
    margin-right: 10px;
    margin-bottom: 10px;
    width: 190px;
    outline: none;
}
.message{
    display: block;
    border: transparent;
    padding: 10px;
    height: 10vh;
    width:150%;
    max-width: 390px;
    outline: none;
    font-family: var(--font-sans);
}
.subject{
    display: block;
    border: transparent;
    padding: 10px;
    width: 150%;
    max-width: 390px;
    margin-bottom: 10px;
    outline: none;
}
.body{
    background-color: aliceblue;
    color: black;
    display: grid;
    transition: 0.5s;
}

.dark-mode{
    background-color: #1f1d1d;
    color: white;
    height: 100%;
    display: grid;
    transition: 0.5s;
    
}
.git{
    padding: 10px;
}
.cv{
    display: block;
    background-color: #1f1d1d;
    color: white;
    border-top-right-radius: 10px;
    border-bottom-left-radius: 10px;
    padding: 15px;
    margin-top: 10px;
    width: 190px;
    height: 3em;
    font-size: 20px;
    transition: 1s;
}
.cv:hover{
    background-color: rgb(82, 79, 79);
    
    transition: 1s;
}

.container_res{
    margin-left: 15px;
    margin-right: 5vw;
}


#particle-container{
    z-index: 1;
}


/*interactive name */

.headline{
    position: relative;
    font-size: clamp(40px, 8vw, 80px);
    font-weight: 600;
    display: inline-block;
}
@container (max-width:500px){
    .headline {
        font-size: 2em;
    }
}

.subheadline{
    position: relative;
    font-size: 3em;
    display: inline-block;
    container-type: normal;
}
@container (max-width:500px){
    .subheadline {
        font-size: 2em;
    }
}
.subheadline::after{
	content:" ";
	position:absolute;
	top:50%;
	width:200px;
	border-top:1px solid slategrey;
    border-radius: 10px;
    margin-left: 10px;
	
}

.E{
    color: rgb(248, 85, 85);
    display: inline-block;
    transition: transform 0.5s;
}
.S{
    color: rgb(85, 123, 248);
    display: inline-block;
    transition: transform 0.5s;
}
.A{
    color: rgb(85, 248, 134);
    display: inline-block;
    transition: transform 0.5s;
}
.U{
    color: #ffbc48;
    display: inline-block;
    transition: transform 0.5s;
}
.E:hover{
    transform: translateY(-10px);
    
}
.S:hover{
    transform: translateY(-10px);
    
}
.A:hover{
    transform: translateY(-10px);
    
}
.U:hover{
    transform: translateY(-10px);
    
}
/* ... */

